# Tosa2LinalgTranslator

./: .gitignore  CMakeLists.txt  README.md  init.sh  main.cpp
include/: colors.hpp  err.hpp  file.hpp  log.hpp  translator.hpp  typeConverter.hpp
src/: err.cpp  file.cpp  main.cpp  translator.cpp
tests/: tests.cpp
tests/checkers/: add_0d_checker.ll  add_1d_all_dynamic_checker.ll  add_2d_broadcast_checker.ll  clamp_f32_checker.ll  clamp_i32_checker.ll  conv2d_checker.ll  matmul_checker.ll  matmul_quantized_checker.ll
tests/mlir/: add_0d.ll  add_1d_all_dynamic.ll  add_2d_broadcast.ll  clamp_f32.ll  clamp_i32.ll  clamp_i32_t2l.ll  conv2d.ll  matmul.ll  matmul_quantized.ll  simple.ll  tests.cpp
